--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,3 +1,7 @@
+.flex {
+  display: flex
+}
+
 .h-full {
   height: 100%
 }
@@ -13,6 +17,11 @@
 .bg-blue-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(191 219 254 / var(--tw-bg-opacity))
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity))
 }
 
 .px-3 {
